--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "nextjs-chat",
+  "name": "next-discord",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "npm run build && npm run export && cp _redirects out/_redirects"
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
