--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export",
-    "deploy": "npm run build && npm run export && cp _redirects out/_redirects"
+    "start": "next start"
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
