--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@firebase/firestore": "^2.3.2",
     "autoprefixer": "^10.2.6",
+    "dayjs": "^1.10.5",
+    "firebase": "^8.6.3",
     "next": "10.2.3",
     "postcss": "^8.3.0",
     "react": "17.0.2",
